Добавлены фичи получения пользователя, списка пользователей во Ids. Дополнительно задокументирован Swagger для UserController
